# SSlib

./: .gitignore  SGP4.cpp  SGP4.h  SSlib.vcxproj  SSlib.vcxproj.filters  Sgpsdp.h  Source.cpp
Release/SSlib.tlog/: CL.command.1.tlog  SSlib.lastbuildstate
libSGP/: Astro.cpp  SGP4.cpp  Sgpsdp.cpp  vector.h
libSatSelect/: CMakeLists.txt  SatSelect.cpp  SatSelect.h  Satselect.cpp  Sgpsdp.h  Source.cpp  vector.h
x64/Debug/: Astro.nativecodeanalysis.sarif  Math.nativecodeanalysis.sarif  SSlib.exe.recipe  Sgpsdp.nativecodeanalysis.sarif  Utils.nativecodeanalysis.sarif  observer.nativecodeanalysis.sarif  time.nativecodeanalysis.sarif  time.nativecodeanalysis.xml  vc143.idb
x64/Debug/SSlib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SSlib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Release/: SSlib.exe.recipe  SSlib.iobj  SSlib.ipdb
x64/Release/SSlib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SSlib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
